--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.24.0",
         "react-simple-maps": "^3.0.0",
+        "recharts": "^3.7.0",
         "tailwindcss": "^3.4.4"
     },
     "overrides": {
